--- a/app/views/post/show.html.erb
+++ b/app/views/post/show.html.erb
@@ -34,8 +34,8 @@
     
     <% unless @post.image.nil? %>
         <%= image_tag @post.image %>
-         <%= image_tag @post.thumb %>
-          <%= image_tag @post.middle %><br><br><br> <!-- 사진 출력 -->
+         <!--<#%= image_tag @post.thumb %>-->
+         <!-- <#%= image_tag @post.middle %><br><br><br> <!-- 사진 출력 -->
     <% end %>
     
     <!-- 댓글 출력 -->
