--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -15,7 +15,7 @@
           <th scope="row"><%= p.id %></th>
          
           <td> <a href = "/post/show/<%= p.id %>"><%= p.title %></a></td> 
-          <!-- 타이틀 전체 링크 걸기 -- 근데 다 똑같은 글로 가니까 글을 구분해줘야해 글 번호로 구분하자--> 
+           <!--타이틀 전체 링크 걸기 -- 근데 다 똑같은 글로 가니까 글을 구분해줘야해 글 번호로 구분하자-->
           
           <td><%= p.user.username %></td>
           <td><%= p.created_at %></td> 
@@ -27,4 +27,82 @@
     <a href = "/post/new">
          <button type="button" class="btn btn-success">글쓰기</button>
     </a>
+
+
+  <!--카드 -->
+  <% @post.each do |p| %>
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyFfgvMQyvWalZcpXPWsoy6Oy7PK3qeCtJQc9jxefVUD67Uw7S" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><a href = "/post/show/<%= p.id %>"><%= p.title %></a></h5>
+        <p class="card-text"><%= p.id%></p>
+        <a href="#" class="btn btn-primary"><%= p.user.username %></a>
+        <div><%= p.created_at%></div>
+      </div>
+    </div>
+  <%end%>
+  <!--카드 끝-->
 </div>
+<div id ="enters"></div>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous">
+</script>
+<script>
+
+  var count = 4;
+  var stringTemp = "";
+  function call(){
+    $.ajax({
+        type:"get",
+        url:"/post/ajaxCall",
+        data : {'count' : count},
+        dataType : "json",
+        success: function(data){
+            alert(data[title]);
+        },
+        error: function(error) {
+            alert(error);
+        }  
+    });
+
+}
+  var page = 1;
+  
+  var page = 1;
+
+  $(window).scroll(function() {
+      if ( $(document).height() > $(window).height()) {
+      
+        // $("#enters").append("<h1>Page</h1> " + page);
+        call();
+      }
+  });
+</script>
+<!--<input id = "idv_1"></input>-->
+<!--<button onclick = "add_1()"> + </button>-->
+<!--<input id = "idv_2"></input>-->
+<!--=-->
+<!--<input id = "idr_1"></input>-->
+
+<!--<span>1</span>-->
+<!--<button onclick = "add_2(<#%= 1%>, <#%= 2%>)"> +</button>-->
+<!--<span>2</span>-->
+<!--=-->
+<!--<input id = "idr_2"> </input>-->
+
+<!--<script>-->
+<!--// function add_1(){-->
+<!--//   var A = document.getElementById("idv_1").value; -->
+<!--//   var B = document.getElementById("idv_2").value;-->
+<!--//   var C = Number(A) + Number(B);-->
+<!--//   alert(C);-->
+<!--//   document.getElementById("idr_1").value = C;-->
+<!--// }-->
+
+<!--  function add_2(_value1, _value2){-->
+<!--    document.getElementById("idr_2").value = (_value1 + _value2) -->
+<!--  }-->
+ 
+<!--</script>-->
